# svm_cutlery

./: LICENSE  README.md  app.ipynb  pyproject.toml
fork/: cake1.txt  cake2.txt  cake3.txt  pasta1.txt  pasta2.txt  pasta3.txt  sarada1.txt  sarada2.txt  sarada3.txt  steak1.txt  steak2.txt  steak3.txt
spoon/: curry1.txt  curry2.txt  curry3.txt  ice1.txt  ice2.txt  ice3.txt  omurice1.txt  omurice2.txt  omurice3.txt  yogurt1.txt  yogurt2.txt  yogurt3.txt
