[tool.poetry]
name = "svm-cutlery"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "svm_cutlery"}]

[tool.poetry.dependencies]
python = "^3.8"
pycaret = "^2.3.10"
pandas = "~1.4.4"
numpy = "~1.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
